--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -97,7 +97,7 @@
             "name": "Python: All debug Options",
             "type": "python",
             "request": "launch",
-            "pythonPath": "C:/Program Files/Python36",
+            "pythonPath": "D:/Program Files/Python",
             "program": "${file}",
             "module": "module.name",
             "env": {
