--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "C:\\Program Files\\Python36\\python.exe",
+    "python.pythonPath": "D:\\Program Files\\Python\\python.exe",
     "python.linting.pylintEnabled": false
 }
