--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
     "python.pythonPath": "D:\\Program Files (x86)\\Python36\\python.exe",
-    "python.linting.pylintEnabled": false,
-    "editor.fontSize": 18
+    "python.linting.pylintEnabled": false
 }
